# cutils

./: main.c  meson.build
include/: linkedlist.h  vector.h
src/: linkedlist.c  vector.c
src/structures/: linkedlist.c  vector.c
